# michael-client

./: LICENSE  README.md  pyproject.toml
michael_client/: __init__.py  cli.py  config.py  gql.py  http.py  store.py  subs.py  viz.py
